--- a/source - PIC16F870/driver.cfg
+++ b/source - PIC16F870/driver.cfg
@@ -1,11 +1,11 @@
 <?xml version="1.0"?>
 <MCU_DEVICE_FLAGS>
   <DEVICE>
-    <DEVICE_NAME>P16F84A</DEVICE_NAME>
+    <DEVICE_NAME>P16F870</DEVICE_NAME>
     <VALUE>
       <COUNT>1</COUNT>
       <VALUE0>
-        <VAL>$002007:$3FFB</VAL>
+        <VAL>$002007:$3B71</VAL>
       </VALUE0>
     </VALUE>
   </DEVICE>
